<resources>
    <string name="app_name">GVS-2000</string>
    <string name="connect">접속</string>
    <string name="disconnect">해제</string>
    <string name="app_description">GVS-2000</string>
    <string name="version">Version: v1.0.0</string>
    <string name="volumeControl">볼륨 제어</string>
    <string name="eqcontrol">EQ 제어</string>
    <string name="musicplayer">뮤직 플레이어</string>
    <string name="settings">설정</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wifi_settings">Wifi 설정</string>
    <string name="spk_setting">스피커 설정</string>
    <string name="save">저장</string>
    <string name="select_name">이름 선택</string>
    <string name="select_mode">모드 선택</string>
    <string name="select_model">모델 선택</string>
    <string name="select_spk">스피커 선택</string>
    <string name="complete">완료</string>
    <string name="mute">MUTE</string>
    <string name="reset_settings">설정 초기화</string>
    <string name="setid">ID 설정</string>
    <string name="mode_select">모드 선택(STEREO/BTL)</string>
    <string name="sync">동기화</string>
    <string name="eq_reset">EQ RESET</string>
    <string name="bypass">BYPASS</string>
    <string name="music_start_time">00:00</string>
    <string name="total_music_list">전체 뮤직 리스트</string>
    <string name="preset">PRESET</string>
    <string name="preset_save">프리셋 저장</string>
    <string name="preset_load">프리셋 로드</string>
    <string name="preset_delete">프리셋 삭제</string>
    <string name="preset_confirm">프리셋 설정 확인</string>
    <string name="preset_save_prompt">Choose a Data</string>
    <string name="finish">종료</string>
    <string name="tts">TTS</string>
    <string name="delete_text">텍스트 삭제</string>
    <string name="save_text">텍스트 저장</string>
    <string name="load_text">텍스트 불러오기</string>
    <string name="select_language">언어선택</string>
    <string name="reset">초기화</string>
    <string name="sst">SST 인식</string>
    <string name="tts_apply">TTS 실행</string>
    <string name="stt_hint">여기를 눌러 텍스트를 입력하거나 마이크 버튼을 누른채 말하세요..</string>
    <string name="listening">듣고 있습니다…</string>
    <string name="tts_no_text">텍스트를 입력하고 청취버튼을 눌러주세요</string>
    <string name="tts_reset_fail">tts 초기화 실패</string>
    <string name="tts_select_lang">언어를 선택하세요</string>
    <string name="tts_not_support_lang">지원하지 않는 언어입니다. 설정 확인바랍니다.</string>
    <string name="tts_save_text">아래 텍스트를 저장하시겠습니까?</string>
    <string name="saved">저장됨</string>
    <string name="tts_save_after_textinput">텍스트 작성 후 저장버튼을 눌러주세요</string>
    <string name="tts_select_text">불러올 텍스트를 선택하세요</string>
    <string name="tts_not_saved_text">저장된 텍스트가 없습니다.</string>
    <string name="tts_select_deletetext">삭제 할 텍스트를 선택하세요</string>
    <string name="tts_setting_info">음성지원 설정안내</string>
    <string name="tts_go_setting">설정 바로가기</string>
    <string name="korean">한국어</string>
    <string name="english">영어</string>
    <string name="logo">Logo</string>
    <string name="tunning">자동음향조율</string>
    <string name="calibration">Calibration</string>
    <string name="auto_tune">자동음향조율</string>
    <string name="select_speaker">스피커 선택</string>
    <string name="set_auto">자동설정</string>
    <string name="volume_reset">전체 볼륨 \n초기화</string>
    <string name="save_preset">프리셋\n저장하기</string>
    <string name="load_preset">프리셋\n불러오기</string>
    <string name="show_table">Show Table</string>
    <string name="close_table">Close Table</string>


    <string-array name="preset_save_arrays">
        <item>PRESET01</item>
        <item>PRESET02</item>
        <item>PRESET03</item>
        <item>PRESET04</item>
        <item>PRESET05</item>
        <item>PRESET06</item>
        <item>PRESET07</item>
        <item>PRESET08</item>
        <item>PRESET09</item>
        <item>PRESET10</item>
        <item>PRESET11</item>
        <item>PRESET12</item>
    </string-array>

    <string-array name="target_volume">
        <item>80</item>
        <item>85</item>
        <item>90</item>
        <item>95</item>
        <item>100</item>
        <item>105</item>
    </string-array>

    <string name="loading">서버로 부터 모델을 다운로드 중입니다…</string>
    <string name="show_eq">Show EQ</string>
    <string name="close_eq">Close EQ</string>
    <string name="waiting">잠시만 기다려 주세요…</string>
    <string name="measure_reverb">잔향 측정</string>
    <string name="append_graph">Append Graph</string>
    <string name="plus">+</string>
    <string name="minus">-</string>


    <string-array name="avgTime_array">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
    </string-array>

</resources>


