<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="1dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/layout_border_text"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/layout_border_text">

            <!--Logo-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/logo_splash" />

                <com.manojbhadane.QButton
                    android:id="@+id/btn_connect"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="@dimen/main_button_top_margin"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/connect"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/button_text_size"
                    app:qb_backgroundColor="@android:color/holo_green_light"
                    app:qb_radius="40"
                    app:qb_strokeColor="@android:color/holo_green_dark"
                    app:qb_strokeWidth="3" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/app_description"
                android:textColor="@android:color/black"
                android:textSize="@dimen/app_description_text_size"
                android:layout_marginStart="5dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/version"
                android:textColor="@android:color/black"
                android:textSize="@dimen/app_description_text_size"
                android:layout_marginStart="5dp"
                android:textStyle="bold" />


            <!--Menu Button-->

            <com.manojbhadane.QButton
                android:id="@+id/btn_volumePannel"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="@dimen/main_button_top_margin"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/volumeControl"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size"
                app:qb_backgroundColor="@android:color/holo_blue_bright"
                app:qb_radius="40"
                app:qb_strokeColor="@android:color/holo_blue_dark"
                app:qb_strokeWidth="3" />

            <com.manojbhadane.QButton
            android:id="@+id/btn_eqPannel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="@dimen/main_button_top_margin"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/eqcontrol"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size"
            app:qb_backgroundColor="@android:color/holo_blue_bright"
            app:qb_radius="40"
            app:qb_strokeColor="@android:color/holo_blue_dark"
            app:qb_strokeWidth="3" />

            <com.manojbhadane.QButton
                android:visibility="visible"
                android:id="@+id/btn_tunePanel"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="@dimen/main_button_top_margin"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/tunning"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size"
                app:qb_backgroundColor="@android:color/holo_blue_bright"
                app:qb_radius="40"
                app:qb_strokeColor="@android:color/holo_blue_dark"
                app:qb_strokeWidth="3" />

            <com.manojbhadane.QButton
                android:id="@+id/btn_musicPlayer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="@dimen/main_button_top_margin"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/musicplayer"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size"
                app:qb_backgroundColor="@android:color/holo_blue_bright"
                app:qb_radius="40"
                app:qb_strokeColor="@android:color/holo_blue_dark"
                app:qb_strokeWidth="3" />

            <com.manojbhadane.QButton
                android:id="@+id/btn_tts"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="@dimen/main_button_top_margin"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/tts"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size"
                app:qb_backgroundColor="@android:color/holo_blue_bright"
                app:qb_radius="40"
                app:qb_strokeColor="@android:color/holo_blue_dark"
                app:qb_strokeWidth="3" />

            <com.manojbhadane.QButton
                android:id="@+id/btn_settings"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="@dimen/main_button_top_margin"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/settings"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size"
                app:qb_backgroundColor="@android:color/holo_blue_bright"
                app:qb_radius="40"
                app:qb_strokeColor="@android:color/holo_blue_dark"
                app:qb_strokeWidth="3" />

        </LinearLayout>

        <!--Main Fragment-->
        <FrameLayout
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_margin="@dimen/button_gap"
            android:layout_height="match_parent"
            android:layout_weight="5" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_admin"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/layout_border_text"
        android:orientation="horizontal">

        <ScrollView
            android:id="@+id/scrollView_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:padding="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_received"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="1dp"
                    android:textSize="@dimen/infoTextSize"
                    android:textStyle="bold"
                    android:verticalScrollbarPosition="right" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/tv_ip_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/layout_border_text"
            android:gravity="center"
            android:textSize="@dimen/ipInfoTextSize" />

        <com.manojbhadane.QButton
            android:id="@+id/btn_finish"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:text="@string/finish"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size"
            app:qb_backgroundColor="@android:color/holo_blue_bright"
            app:qb_radius="40"
            app:qb_strokeColor="@android:color/holo_blue_dark"
            app:qb_strokeWidth="3" />





    </LinearLayout>


</LinearLayout>