<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context=".fragment.settings.view.spksetting.SpkSettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spk_setting"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="@dimen/menu_text_size"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:gravity="left|center_vertical"
        android:text="@string/select_spk"
        android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/sp_spkNo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/select_model"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_spkModel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical" />

        <Spinner
            android:id="@+id/sp_spkModel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/select_mode"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_spkMode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical" />

        <Spinner
            android:id="@+id/sp_spkMode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/select_name"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_spkName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical" />

        <Spinner
            android:id="@+id/sp_spkName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.manojbhadane.QButton
            android:id="@+id/btn_settingsReset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textFontWeight="1"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="초기화"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size"
            app:qb_backgroundColor="@android:color/holo_green_light"
            app:qb_radius="10"
            app:qb_strokeColor="@android:color/holo_green_dark"
            app:qb_strokeWidth="3" />

        <com.manojbhadane.QButton
            android:id="@+id/btn_settingsSave"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textFontWeight="1"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size"
            app:qb_backgroundColor="@android:color/holo_green_light"
            app:qb_radius="10"
            app:qb_strokeColor="@android:color/holo_green_dark"
            app:qb_strokeWidth="3" />

        <com.manojbhadane.QButton
            android:id="@+id/btn_settingsComplete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textFontWeight="1"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/complete"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size"
            app:qb_backgroundColor="@android:color/holo_green_light"
            app:qb_radius="10"
            app:qb_strokeColor="@android:color/holo_green_dark"
            app:qb_strokeWidth="3" />


    </LinearLayout>



</LinearLayout>