<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context=".fragment.settings.view.setmode.SetModeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mode_select"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="@dimen/menu_text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_border_text_select"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="스피커 선택"
            android:textSize="@dimen/button_text_size"
            android:gravity="center"
            android:layout_weight="2"/>

        <Spinner
            android:id="@+id/sp_setModeSpeakerList"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textAlignment="center"/>

        <com.manojbhadane.QButton
            android:id="@+id/btn_setModeSpeakerSelect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="선택"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size"
            app:qb_backgroundColor="@android:color/holo_green_light"
            app:qb_radius="10"
            app:qb_strokeColor="@android:color/holo_green_dark"
            app:qb_strokeWidth="3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_spkMode"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_mode"
            android:textColor="@android:color/black"/>
        <RadioGroup
            android:id="@+id/rg_setup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <RadioButton
                android:id="@+id/rb_setup_2way"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="STEREO"
                android:textAlignment="center"
                android:textSize="@dimen/button_text_size"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/rb_setup_bridge"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="BTL"
                android:textAlignment="center"
                android:textSize="@dimen/button_text_size"
                android:textStyle="italic" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.manojbhadane.QButton
                android:id="@+id/btn_saveMode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size"
                app:qb_backgroundColor="@android:color/holo_green_light"
                app:qb_radius="10"
                app:qb_strokeColor="@android:color/holo_green_dark"
                app:qb_strokeWidth="3" />

        </LinearLayout>


    </LinearLayout>







</LinearLayout>